# dvh-airflow-kafka

./: .dockerignore  .gitignore  .mob  Dockerfile  README.md  build-image.sh  kafka-topic.md  local.env  podman.env  pyproject.toml  pytest.ini  scripts.py
.github/: dependabot.yml
.github/workflows/: build_image.yml  check_python.yml  test.yml
.nais/: image-job-template.yml
src/: base.py  config.py  console_target.py  environment.py  kafka_source.py  kafka_target.py  main.py  mapping.py  oracle_source.py  oracle_target.py  test_base.py  test_config.py  transform.py
src/development/: conftest.py  test_base.py  test_config.py  test_integration.py  test_kafka_setup.py  test_kafka_source.py  test_nested_col_oracle_target.py  test_oracle_target.py  test_transform.py
src/development/utils/: container.py
src/tests/: fixtures.py  melding-avro.json  test-config.yml  test.avsc  test_kafka_avro.py  test_kafka_consumer.py  test_kafka_source.py  test_mapping.py  test_oracle_target.py
src/tests/fixtures/: fixtures.py
src/tests/fixtures/kafka-configs/: test-config.yml  test-config_json.yml  test-config_oracle.yml
src/utils/: kafka_utils.py
utviklingsmiljo/: create_topic.py  cred_decoding.py  docker-compose.yml  guide.md  producer.py  refresh-docker.sh  refresh-topics.sh
utviklingsmiljo/kafka-meldinger/: cv.json  melding-hello.json  melding-k6.json
utviklingsmiljo/sql/: 01_startup.sql  02_objects.sql
