[project]
name = "dvh-airflow-kafka"
version = "0.0.1"
description = ""
authors = [{name = "NAV DVH"}]
license = "MIT"
requires-python = ">=3.11,<4.0"

dependencies = [
    "avro>=1.12.0",
    "dateparser>=1.2.0",
    "PyYAML>=6.0",
    "requests>=2.34.2",
    "python-dotenv>=1.1.1",
    "oracledb>=4.0.1,<5.0.0",
    "python-benedict>=0.37.0",
    "google-api-python-client>=2.197.0",
    "google-cloud-secret-manager>=2.29.0",
    "confluent-kafka>=2.14.2",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "python-schema-registry-client>=2.6.1",
    "testcontainers>=4.13.2",
    "pyinstrument>=5.0.3",
]

[tool.uv]
python-downloads = "never"
package = false

# Due to vulnerabilities, some dependencies need to be overridden to a specific version.
# This also might require excluding those dependencies from the dependency cooldown.
override-dependencies = [
    "cryptography>=46.0.7",
    "pygments>=2.20.0",
]

[tool.ruff]
include = ["*.py", "*.ipynb"]
line-length = 120

# Pytest config
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
pythonpath = "src"
testpaths = [
    "src/tests",
]
markers = [
    "unit: tests for custom transformations",
    "functional: tests for source/target interfaces",
    "integration: Integration tests",
]